# nidaqlib

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: architecture.md  channels.md  design.md  hardware-day.md  index.md  installation.md  logging.md  quickstart-async.md  quickstart-sync.md  robots.txt  safety.md  streaming.md  task-specs.md  tdms.md  testing.md  timing.md  troubleshooting.md
docs/api/: backend.md  channels.md  config.md  errors.md  index.md  manager.md  nidaqlib.md  sinks.md  streaming.md  sync.md  system.md  tasks.md  testing.md
examples/: combined_mfc_balance_daq.py  synchronized_acquisition.py
overrides/: main.html
src/nidaqlib/: __init__.py  _logging.py  _runtime.py  config.py  constants.py  errors.py  manager.py  testing.py  units.py  version.py
src/nidaqlib/backend/: __init__.py  base.py  fake.py  nidaqmx_backend.py
src/nidaqlib/channels/: __init__.py  analog_input.py  analog_output.py  base.py  counter_input.py  counter_output.py  digital_input.py  digital_output.py
src/nidaqlib/cli/: __init__.py  capture.py  info.py  list.py  read.py
src/nidaqlib/sinks/: __init__.py  _schema.py  base.py  csv.py  jsonl.py  memory.py  parquet.py  postgres.py  sqlite.py
src/nidaqlib/streaming/: __init__.py  _types.py  block.py  poll_source.py  recorder.py
src/nidaqlib/sync/: __init__.py  daq.py  portal.py  recording.py  session.py
src/nidaqlib/system/: __init__.py  discovery.py  models.py
src/nidaqlib/tasks/: __init__.py  builder.py  metadata.py  models.py  session.py  spec.py  triggers.py
tests/: conftest.py
tests/integration/: conftest.py  test_a_session_lifecycle.py  test_b_recorders_and_sinks.py  test_c_tdms_driver_side.py  test_d_sync_and_cli.py  test_e_manager.py  test_f_sidecar_metadata.py
tests/unit/: test_acquire.py  test_analog_input.py  test_backend_ai_channel_attrs.py  test_callback_bridge.py  test_counter_channels.py  test_dataclasses.py  test_error_policy_return.py  test_errors.py  test_event_loop_liveness.py  test_manager.py  test_manager_synchronized.py  test_output_channels.py  test_postgres_sink.py  test_record_polled.py  test_record_polled_manager.py  test_run_metadata.py  test_session.py  test_sinks.py  test_smoke.py  test_sync.py  test_tdms.py  test_thermocouple.py  test_triggers.py  test_unified_api.py  test_write_safety.py
