[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------

[project]
name = "nidaqlib"
dynamic = ["version"]
description = "Experiment-facing NI-DAQmx acquisition layer for scientific instrumentation."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Grayson Bellamy", email = "gbellamy@umd.edu" }]
keywords = ["ni-daqmx", "daq", "data-acquisition", "instrument", "laboratory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AnyIO",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dependencies = [
    "anyio>=4.13",
    "nidaqmx>=1.0",
    "numpy>=2",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30"]
parquet = ["pyarrow>=16"]
docs = [
    "zensical>=0.0.37",
    "mkdocstrings-python>=1.12",
]

[project.scripts]
nidaq-list = "nidaqlib.cli.list:main"
nidaq-capture = "nidaqlib.cli.capture:main"
nidaq-read = "nidaqlib.cli.read:main"
nidaq-info = "nidaqlib.cli.info:main"

[project.urls]
Homepage = "https://github.com/GraysonBellamy/nidaqlib"
Repository = "https://github.com/GraysonBellamy/nidaqlib"
Documentation = "https://GraysonBellamy.github.io/nidaqlib/"
Issues = "https://github.com/GraysonBellamy/nidaqlib/issues"
Changelog = "https://github.com/GraysonBellamy/nidaqlib/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.1.dev0"

[tool.hatch.build.hooks.vcs]
version-file = "src/nidaqlib/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nidaqlib"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

# ---------------------------------------------------------------------------
# uv — dependency groups (PEP 735)
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "type" },
    { include-group = "test" },
    { include-group = "docs" },
    "nptdms>=1.10.0",
    "pre-commit>=4.0",
]
lint = [
    "ruff>=0.15.11",
]
type = [
    "mypy>=1.20",
    "pyright>=1.1.390",
]
test = [
    "pytest>=8.3",
    # AnyIO ships its own pytest plugin; pytest-asyncio would conflict with it
    # (the two auto-modes disagree, and pytest-asyncio wraps fixtures in fresh
    # tasks that break cancel scopes / task groups). See AnyIO testing docs.
    "pytest-cov>=6.0",
    "coverage[toml]>=7.13.5",
    "hypothesis>=6.152.4",
    "trio>=0.27",       # used as a secondary AnyIO backend in cross-backend tests
    "uvloop>=0.22.1; platform_system == 'Linux' or platform_system == 'Darwin'",
]
docs = [
    "zensical>=0.0.37",
    "mkdocstrings-python>=1.12",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
# Generated by hatch-vcs.
extend-exclude = [
    "src/nidaqlib/_version.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # flake8-simplify
    "ASYNC",# flake8-async (general async lints; wait_for ban is enforced via TID251 below)
    "PL",   # pylint
    "PT",   # pytest-style
    "RUF",  # ruff-specific
    "D",    # pydocstyle (Google)
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print (no print in library)
    "TID",  # flake8-tidy-imports
    "TC",   # flake8-type-checking (was TCH)
    "PTH",  # flake8-use-pathlib
    "ANN",  # flake8-annotations
    "PERF", # perflint
    "FURB", # refurb
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "A",    # flake8-builtins
]
ignore = [
    "D100",    # missing module docstring — tolerated for now on stubs
    "D104",    # missing docstring in public package
    "D105",    # magic method docstrings — __str__ / __repr__ rarely need docs
    "D107",    # __init__ docstrings — class docstring covers it
    "D203",    # incompatible with D211
    "D213",    # incompatible with D212
    "PLR0913", # too many args — common for task/channel methods
    "RUF002",  # ambiguous unicode in docstrings — en/em dashes are fine
    "RUF003",  # ambiguous unicode in comments
    "ANN401",  # Any in annotations — sometimes legitimate
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "S101", "PLR2004", "PLC0415", "S", "ASYNC109"]
"examples/**" = ["D", "T20", "S101", "PLR2004", "INP001"]
# CLI scripts intentionally print to stdout/stderr.
"src/nidaqlib/cli/**" = ["T20"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# asyncio.wait_for has cancel-leak corner cases and is superseded by
# asyncio.timeout() / anyio.fail_after.
"asyncio.wait_for".msg = "Use anyio.fail_after / anyio.move_on_after instead."

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 88

# ---------------------------------------------------------------------------
# mypy — strict
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_unimported = true
show_error_codes = true
show_column_numbers = true
pretty = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "ignore-without-code",
    "unused-awaitable",
    "possibly-undefined",
]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = ["src", "tests"]
exclude = ["src/nidaqlib/_version\\.py"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# nidaqmx-python ships py.typed, but its surface is large and uses C-API
# constructs that can trip strict mypy. Loosen until we exercise the boundary.
[[tool.mypy.overrides]]
module = ["nidaqmx", "nidaqmx.*"]
ignore_missing_imports = true
follow_imports = "skip"

# pyarrow is an optional extra and ships no py.typed marker as of 16.x.
[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true
follow_imports = "skip"

# asyncpg is an optional extra.
[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true
follow_imports = "skip"

# nptdms is only used in hardware integration tests for TDMS file inspection.
[[tool.mypy.overrides]]
module = ["nptdms", "nptdms.*"]
ignore_missing_imports = true
follow_imports = "skip"

# ---------------------------------------------------------------------------
# Pyright — secondary type checker
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["src", "tests"]
exclude = ["src/nidaqlib/_version.py", "**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
# nidaqmx-python and optional pyarrow are runtime dependencies without a
# complete stub surface. Keep actionable unknown-type checks enabled below.
reportMissingTypeStubs = "none"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"

# Tests deliberately reach for runtime-narrowing escapes that pyright's strict
# mode doesn't track perfectly (Protocol-union sinks, pyarrow-untyped readers).
executionEnvironments = [
    { root = "tests", reportArgumentType = "warning", reportUnknownArgumentType = "warning" },
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# No asyncio_mode: we use AnyIO's pytest plugin instead of pytest-asyncio.
# Async tests mark with @pytest.mark.anyio; cross-backend coverage comes from
# the parametrised anyio_backend fixture in tests/conftest.py.
xfail_strict = true
markers = [
    "hardware: requires connected NI DAQ hardware (read-only)",
    "hardware_stateful: changes task/device state — opt in via NIDAQLIB_ENABLE_STATEFUL_TESTS=1",
    "hardware_output: writes analog/digital/counter output — opt in via NIDAQLIB_ENABLE_OUTPUT_TESTS=1",
    "hardware_destructive: calibration or potentially unsafe operations — opt in via NIDAQLIB_ENABLE_DESTRUCTIVE_TESTS=1",
    "slow: excluded from the fast CI run",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "-m",
    "not hardware and not hardware_stateful and not hardware_output and not hardware_destructive",
]
filterwarnings = [
    "error",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source_pkgs = ["nidaqlib"]
branch = true
parallel = true
omit = [
    "src/nidaqlib/_version.py",
]

[tool.coverage.paths]
nidaqlib = ["src/nidaqlib", "*/site-packages/nidaqlib"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@overload",
    "@abstractmethod",
    "\\.\\.\\.",
]
